<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            >
        <EditText
                android:id="@+id/preg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_glucose"
                android:hint="@string/prompt_glucose"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/plas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_plasma"
                android:hint="@string/prompt_plasma"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/preg"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />

        <EditText
                android:id="@+id/pres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_blood_pressure"
                android:hint="@string/prompt_blood_pressure"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/plas"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_insulin"
                android:hint="@string/prompt_insulin"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/pres"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_fast"
                android:hint="@string/prompt_fast"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/skin"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_test"
                android:hint="@string/prompt_test"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/fast"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_BMI"
                android:hint="@string/prompt_BMI"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/test"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/pedi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_pedi"
                android:hint="@string/prompt_pedi"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/mass"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_Age"
                android:hint="@string/prompt_Age"
                android:imeActionLabel="@string/action_send_data_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_below="@id/pedi"
                android:layout_centerHorizontal="true"
                android:minWidth="300dp"
                />
        <Button
                android:id="@+id/send_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/action_send_data"
                android:onClick="sendMessage"
                android:clickable="true"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/age"/>
        <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                android:indeterminate="false"
                android:layout_centerInParent="true"
                />
    </RelativeLayout>

</ScrollView>



